test/spec_vectors/simd_i16x8_sat_arith/fail/module_12.wat
(module (func $i16x8.add_sat_u-arg-empty (result v128) (i16x8.add_sat_u)))